--- a/mathalon/game.css
+++ b/mathalon/game.css
@@ -54,7 +54,7 @@ header p {
     color: #eeeeee;
 }
 
-/* Correct Level Indicator Styling */
+/* Single Level Indicator Styling */
 #level-indicator {
     font-size: 2.5rem;
     font-weight: 700;
