--- a/mathalon/game.css
+++ b/mathalon/game.css
@@ -16,7 +16,6 @@ body {
     align-items: center;
     min-height: 100vh;
     text-align: center;
-    padding: 20px 0;
 }
 
 /* Header Styling */
@@ -48,7 +47,6 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 /* Level Indicator Styling */
@@ -60,12 +58,15 @@ main {
 
 /* Progress Bar */
 #progress-container {
-    width: 100%;
+    position: fixed;
+    bottom: 50px; /* Adjusted to be above the footer */
+    width: 90%;
     height: 10px;
     background-color: rgba(255, 255, 255, 0.2);
     border-radius: 5px;
-    margin-top: 20px;
-    overflow: hidden;
+    margin: 0 auto;
+    left: 50%;
+    transform: translateX(-50%);
     box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
@@ -148,4 +149,13 @@ main {
     background: #0072ff;
     border-radius: 50px;
     cursor: pointer;
+}
+
+/* Footer Styling */
+footer {
+    width: 100%;
+    text-align: center;
+    font-size: 0.8rem;
+    color: #cccccc;
+    margin-top: 20px;
 }
